--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,46 @@
     "\n",
     "First, I'll import all the Python libraries needed for data analysis and modeling."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries for data manipulation\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Import libraries for visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Import machine learning libraries\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Settings\n",
+    "pd.set_option('display.max_columns', 50)\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "print(\"✅ Libraries imported successfully!\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
