Create target variable

--- a/index.ipynb
+++ b/index.ipynb
@@ -849,6 +849,45 @@
     "\n",
     "This shows how loan outcomes vary by home ownership status."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Create Target Variable\n",
+    "\n",
+    "\n",
+    "- **1 = Default** (Charged Off or Late)\n",
+    "- **0 = No Default** (Fully Paid or Current)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target created:\n",
+      "default\n",
+      "0    8225\n",
+      "1    1775\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Default rate: 17.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create simple target variable\n",
+    "tb['default'] = tb['loan_status'].isin(['Charged Off', 'Late (31-120 days)', 'Late (16-30 days)']).astype(int)\n",
+    "\n",
+    "print(\"Target created:\")\n",
+    "print(tb['default'].value_counts())\n",
+    "print(f\"\\nDefault rate: {tb['default'].mean():.1%}\")"
+   ]
   }
  ],
  "metadata": {
