Select simple numeric features

--- a/index.ipynb
+++ b/index.ipynb
@@ -888,6 +888,43 @@
     "print(tb['default'].value_counts())\n",
     "print(f\"\\nDefault rate: {tb['default'].mean():.1%}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Select Features\n",
+    "\n",
+    "I'll use only simple numeric features that don't need much cleaning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: (10000, 7)\n",
+      "Features: ['loan_amnt', 'int_rate', 'annual_inc', 'dti', 'open_acc', 'total_acc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select only simple numeric features\n",
+    "features = ['loan_amnt', 'int_rate', 'annual_inc', 'dti', 'open_acc', 'total_acc']\n",
+    "\n",
+    "# Create simple dataset\n",
+    "df_simple = tb[features + ['default']].copy()\n",
+    "\n",
+    "# Remove any rows with missing values\n",
+    "df_simple = df_simple.dropna()\n",
+    "\n",
+    "print(f\"Dataset shape: {df_simple.shape}\")\n",
+    "print(f\"Features: {features}\")"
+   ]
   }
  ],
  "metadata": {
