Split data into train and test sets

--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "[5 rows x 151 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "[5 rows x 151 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "      dtype='object', length=151)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "(10000, 151)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -917,13 +917,48 @@
     "features = ['loan_amnt', 'int_rate', 'annual_inc', 'dti', 'open_acc', 'total_acc']\n",
     "\n",
     "# Create simple dataset\n",
-    "df_simple = tb[features + ['default']].copy()\n",
+    "tb_simple = tb[features + ['default']].copy()\n",
     "\n",
     "# Remove any rows with missing values\n",
-    "df_simple = df_simple.dropna()\n",
+    "tb_simple = tb_simple.dropna()\n",
     "\n",
-    "print(f\"Dataset shape: {df_simple.shape}\")\n",
+    "print(f\"Dataset shape: {tb_simple.shape}\")\n",
     "print(f\"Features: {features}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Split Data\n",
+    "\n",
+    "I'll split the data into training (80%) and testing (20%) sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set: (8000, 6)\n",
+      "Test set: (2000, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separate X and y\n",
+    "X = tb_simple.drop('default', axis=1)\n",
+    "y = tb_simple['default']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(f\"Training set: {X_train.shape}\")\n",
+    "print(f\"Test set: {X_test.shape}\")"
    ]
   }
  ],
