Scale features for modeling

--- a/index.ipynb
+++ b/index.ipynb
@@ -960,6 +960,28 @@
     "print(f\"Training set: {X_train.shape}\")\n",
     "print(f\"Test set: {X_test.shape}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Scale Features\n",
+    "\n",
+    "I'll scale the features so they're all on the same range."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
