Build and evaluate baseline logistic regression model

--- a/index.ipynb
+++ b/index.ipynb
@@ -982,6 +982,82 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Baseline Model - Logistic Regression\n",
+    "\n",
+    "I'll start with a simple logistic regression model as my baseline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Baseline model trained\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train baseline logistic regression\n",
+    "baseline_model = LogisticRegression(random_state=42)\n",
+    "baseline_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_train_pred = baseline_model.predict(X_train_scaled)\n",
+    "y_test_pred = baseline_model.predict(X_test_scaled)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BASELINE MODEL RESULTS\n",
+      "==================================================\n",
+      "\n",
+      "Training Set:\n",
+      "Accuracy: 0.817\n",
+      "Precision: 0.467\n",
+      "Recall: 0.048\n",
+      "F1-Score: 0.087\n",
+      "\n",
+      "Test Set:\n",
+      "Accuracy: 0.838\n",
+      "Precision: 0.459\n",
+      "Recall: 0.053\n",
+      "F1-Score: 0.095\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate baseline model\n",
+    "print(\"BASELINE MODEL RESULTS\")\n",
+    "print(\"=\"*50)\n",
+    "print(\"\\nTraining Set:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_train, y_train_pred):.3f}\")\n",
+    "print(f\"Precision: {precision_score(y_train, y_train_pred):.3f}\")\n",
+    "print(f\"Recall: {recall_score(y_train, y_train_pred):.3f}\")\n",
+    "print(f\"F1-Score: {f1_score(y_train, y_train_pred):.3f}\")\n",
+    "\n",
+    "print(\"\\nTest Set:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_test_pred):.3f}\")\n",
+    "print(f\"Precision: {precision_score(y_test, y_test_pred):.3f}\")\n",
+    "print(f\"Recall: {recall_score(y_test, y_test_pred):.3f}\")\n",
+    "print(f\"F1-Score: {f1_score(y_test, y_test_pred):.3f}\")"
+   ]
   }
  ],
  "metadata": {
