Build and evaluate decision tree model

--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,6 +1058,74 @@
     "print(f\"Recall: {recall_score(y_test, y_test_pred):.3f}\")\n",
     "print(f\"F1-Score: {f1_score(y_test, y_test_pred):.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Improved Model - Decision Tree\n",
+    "\n",
+    "I'll try a decision tree model to see if it performs better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train decision tree (no scaling needed)\n",
+    "tree_model = DecisionTreeClassifier(max_depth=5, random_state=42)\n",
+    "tree_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_train_pred_tree = tree_model.predict(X_train)\n",
+    "y_test_pred_tree = tree_model.predict(X_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DECISION TREE RESULTS\n",
+      "==================================================\n",
+      "\n",
+      "Training Set:\n",
+      "Accuracy: 0.823\n",
+      "Precision: 0.600\n",
+      "Recall: 0.081\n",
+      "F1-Score: 0.142\n",
+      "\n",
+      "Test Set:\n",
+      "Accuracy: 0.834\n",
+      "Precision: 0.407\n",
+      "Recall: 0.068\n",
+      "F1-Score: 0.117\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate decision tree\n",
+    "print(\"DECISION TREE RESULTS\")\n",
+    "print(\"=\"*50)\n",
+    "print(\"\\nTraining Set:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_train, y_train_pred_tree):.3f}\")\n",
+    "print(f\"Precision: {precision_score(y_train, y_train_pred_tree):.3f}\")\n",
+    "print(f\"Recall: {recall_score(y_train, y_train_pred_tree):.3f}\")\n",
+    "print(f\"F1-Score: {f1_score(y_train, y_train_pred_tree):.3f}\")\n",
+    "\n",
+    "print(\"\\nTest Set:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_test_pred_tree):.3f}\")\n",
+    "print(f\"Precision: {precision_score(y_test, y_test_pred_tree):.3f}\")\n",
+    "print(f\"Recall: {recall_score(y_test, y_test_pred_tree):.3f}\")\n",
+    "print(f\"F1-Score: {f1_score(y_test, y_test_pred_tree):.3f}\")"
+   ]
   }
  ],
  "metadata": {
