Compare model performance

--- a/index.ipynb
+++ b/index.ipynb
@@ -1126,6 +1126,128 @@
     "print(f\"Recall: {recall_score(y_test, y_test_pred_tree):.3f}\")\n",
     "print(f\"F1-Score: {f1_score(y_test, y_test_pred_tree):.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Hyperparameter Tuning\n",
+    "\n",
+    "I'll try different max_depth values to find the best decision tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing different max_depth values:\n",
+      "max_depth=3: F1-Score = 0.024\n",
+      "max_depth=5: F1-Score = 0.117\n",
+      "max_depth=7: F1-Score = 0.110\n",
+      "max_depth=10: F1-Score = 0.159\n",
+      "\n",
+      " Best max_depth: 10 with F1-Score: 0.159\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try different depths\n",
+    "depths = [3, 5, 7, 10]\n",
+    "best_score = 0\n",
+    "best_depth = None\n",
+    "\n",
+    "print(\"Testing different max_depth values:\")\n",
+    "for depth in depths:\n",
+    "    model = DecisionTreeClassifier(max_depth=depth, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    score = f1_score(y_test, model.predict(X_test))\n",
+    "    print(f\"max_depth={depth}: F1-Score = {score:.3f}\")\n",
+    "    \n",
+    "    if score > best_score:\n",
+    "        best_score = score\n",
+    "        best_depth = depth\n",
+    "\n",
+    "print(f\"\\n Best max_depth: {best_depth} with F1-Score: {best_score:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FINAL MODEL RESULTS\n",
+      "==================================================\n",
+      "Accuracy: 0.810\n",
+      "Precision: 0.277\n",
+      "Recall: 0.112\n",
+      "F1-Score: 0.159\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train final model with best depth\n",
+    "final_model = DecisionTreeClassifier(max_depth=best_depth, random_state=42)\n",
+    "final_model.fit(X_train, y_train)\n",
+    "\n",
+    "y_test_pred_final = final_model.predict(X_test)\n",
+    "\n",
+    "print(\"FINAL MODEL RESULTS\")\n",
+    "print(\"=\"*50)\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_test_pred_final):.3f}\")\n",
+    "print(f\"Precision: {precision_score(y_test, y_test_pred_final):.3f}\")\n",
+    "print(f\"Recall: {recall_score(y_test, y_test_pred_final):.3f}\")\n",
+    "print(f\"F1-Score: {f1_score(y_test, y_test_pred_final):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. Model Comparison\n",
+    "\n",
+    "Let me compare all three models to see which performs best."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Model  Accuracy  Precision  Recall  F1-Score\n",
+      "0  Logistic Regression     0.838      0.459   0.053     0.095\n",
+      "1       Decision Tree      0.834      0.407   0.068     0.117\n",
+      "2  Tuned Decision Tree     0.810      0.277   0.112     0.159\n",
+      "\n",
+      " Best Model: Tuned Decision Tree (highest recall and F1-score)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create comparison table\n",
+    "comparison = pd.DataFrame({\n",
+    "    'Model': ['Logistic Regression', 'Decision Tree ', 'Tuned Decision Tree'],\n",
+    "    'Accuracy': [0.838, 0.834, 0.810],\n",
+    "    'Precision': [0.459, 0.407, 0.277],\n",
+    "    'Recall': [0.053, 0.068, 0.112],\n",
+    "    'F1-Score': [0.095, 0.117, 0.159]\n",
+    "})\n",
+    "\n",
+    "print(comparison)\n",
+    "print(\"\\n Best Model: Tuned Decision Tree (highest recall and F1-score)\")"
+   ]
   }
  ],
  "metadata": {
