Add conclusions and recommendations

--- a/index.ipynb
+++ b/index.ipynb
@@ -1314,6 +1314,33 @@
     "plt.gca().invert_yaxis()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 15. Conclusions\n",
+    "\n",
+    "**Model Performance:**\n",
+    "- The tuned decision tree achieved the best F1-score (0.159) and recall (11.2%)\n",
+    "- All models struggled with low recall due to class imbalance\n",
+    "\n",
+    "**Key Findings:**\n",
+    "- Interest rate and debt-to-income ratio are important predictors\n",
+    "- The model catches about 11% of actual defaults\n",
+    "- High accuracy (81%) but low recall means the model misses many defaults\n",
+    "\n",
+    "**Limitations:**\n",
+    "- Class imbalance limits model performance\n",
+    "- Only used 10,000 rows and 6 features\n",
+    "- Low recall means the bank would still miss most defaults\n",
+    "\n",
+    "**Recommendations:**\n",
+    "1. Use this model as a first screening tool, not the final decision\n",
+    "2. Combine with manual review for high-risk applications\n",
+    "3. Consider techniques to handle class imbalance (SMOTE, class weights)\n",
+    "4. Collect more data on defaulted loans to improve predictions"
+   ]
   }
  ],
  "metadata": {
