--- a/index.ipynb
+++ b/index.ipynb
@@ -1349,7 +1349,7 @@
     "plt.barh(feature_imp['Feature'], feature_imp['Importance'], color='steelblue')\n",
     "plt.xlabel('Importance')\n",
     "plt.title('Feature Importance for Loan Default Prediction', fontsize=14, fontweight='bold')\n",
-    "plt.gca().invert_yaxis()\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -1357,94 +1357,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## 15. Conclusions and Recommendations\n",
+    "## Conclusions\n",
     "\n",
-    "### Why Machine Learning?\n",
-    "This problem requires machine learning because multiple features (interest rate, income, debt) interact in complex, non-linear ways that simple rules can't capture. Historical loan data contains patterns that can predict future defaults at scale.\n",
+    "- ML predicts loan defaults using multiple interacting features.  \n",
+    "- Tuned Decision Tree performed best (F1 0.159, Recall 11.2%).  \n",
+    "- Key predictors: interest rate, debt-to-income, annual income.  \n",
+    "- Model misses many defaults due to class imbalance.  \n",
+    "- Works best as a **screening tool**, not a final decision.  \n",
+    "- Additional data and feature quality can improve performance.  \n",
     "\n",
-    "---\n",
+    "## Recommendations\n",
     "\n",
-    "### Model Selection\n",
-    "\n",
-    "**Why Decision Tree over Logistic Regression:**\n",
-    "- Captures non-linear relationships (e.g., high interest rate + high DTI = very high risk)\n",
-    "- Detects feature interactions automatically\n",
-    "- More interpretable for stakeholders (shows decision rules)\n",
-    "- No scaling required\n",
-    "\n",
-    "**Why I tuned max_depth:** Prevents overfitting while maintaining predictive power. Tested depths 3, 5, 7, 10 and chose the best F1-score.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Results\n",
-    "\n",
-    "**Final Model:** Tuned Decision Tree (max_depth=7)\n",
-    "\n",
-    "| Model | Accuracy | Recall | F1-Score |\n",
-    "|-------|----------|--------|----------|\n",
-    "| Logistic Regression | 83.8% | 5.3% | 0.095 |\n",
-    "| Decision Tree | 83.4% | 6.8% | 0.117 |\n",
-    "| **Tuned Tree** | **81.0%** | **11.2%** | **0.159** |\n",
-    "\n",
-    "**Key Metrics:**\n",
-    "- **Recall: 11.2%** - Catches 11 out of 100 actual defaults\n",
-    "- **Precision: 27.7%** - 28% of predicted defaults are correct\n",
-    "- **Accuracy: 81.0%** - Overall classification rate\n",
-    "\n",
-    "**Most Important Features:**\n",
-    "1. Interest rate (strongest predictor)\n",
-    "2. Debt-to-income ratio\n",
-    "3. Annual income\n",
-    "4. Engineered features (income-to-loan ratio)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Limitations\n",
-    "\n",
-    "1. **Low Recall (11.2%):** Model misses 89% of actual defaults due to class imbalance (82% non-defaults)\n",
-    "2. **Small Dataset:** Only 10,000 loans limits learning capability\n",
-    "3. **Limited Features:** Missing credit scores, employment history, payment records\n",
-    "4. **Model Fails On:** Edge cases with unusual feature combinations and new economic conditions\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Recommendations\n",
-    "\n",
-    "**1. Deploy as Screening Tool (Not Final Decision)**\n",
-    "- Use model to flag high-risk applications for manual review\n",
-    "- Don't reject applications based solely on model predictions\n",
-    "\n",
-    "**2. Risk-Based Pricing**\n",
-    "- Low risk (0-0.2): Standard rates\n",
-    "- Medium risk (0.2-0.4): Add 2-3% to interest rate\n",
-    "- High risk (0.4+): Manual review or reject\n",
-    "\n",
-    "**3. Improve Data Collection**\n",
-    "- Add credit scores, employment stability, previous loan history\n",
-    "- Would significantly improve predictions\n",
-    "\n",
-    "**4. Address Class Imbalance**\n",
-    "- Next iteration: Use SMOTE or class weights\n",
-    "- Could improve recall from 11% to 30-40%\n",
-    "\n",
-    "**5. Monitor and Retrain**\n",
-    "- Track actual vs predicted defaults monthly\n",
-    "- Retrain model every 6 months with new data\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Business Impact\n",
-    "\n",
-    "**Cost-Benefit:** If missing a default costs $10K but false alarm costs $500, adjust threshold from 0.5 to 0.3 to catch more defaults.\n",
-    "\n",
-    "**Next Steps:**\n",
-    "1. Pilot with 1,000 applications\n",
-    "2. Train on full 2M loan dataset\n",
-    "3. Deploy with monitoring dashboard\n",
-    "\n",
-    "**Final Verdict:** Model should be used as a risk screening tool combined with human judgment, not as a standalone decision system.\n",
-    "\n",
-    "\n"
+    "- Flag high-risk loans for manual review.  \n",
+    "- Adjust interest rates based on predicted risk.  \n",
+    "- Handle class imbalance with SMOTE or class weights.  \n",
+    "- Collect additional data: credit scores, employment history.  \n",
+    "- Monitor predictions and retrain models regularly.  \n",
+    "- Deploy as a **support tool**, not a fixed  decision-making system.\n"
    ]
   }
  ],
