finalize on recommendations

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,9 +6,26 @@
    "source": [
     "# Loan Default Prediction\n",
     "\n",
-    "**Author:** Jose' Barasa  \n",
-    "**Project:** Phase 3 - Loan default Project  \n",
+    "**By:** Jose' Barasa  \n",
     "\n",
+    "\n",
+    "## Business Objective\n",
+    "Predict loan defaults to reduce financial losses.\n",
+    "\n",
+    "\n",
+    "Identify high-risk applicants for manual review.\n",
+    "\n",
+    "\n",
+    "Enable risk-based interest rate adjustments.\n",
+    "\n",
+    "\n",
+    "Improve recall of potential loan defaults.\n",
+    "\n",
+    "\n",
+    "Provide interpretable insights for stakeholders.\n",
+    "\n",
+    "\n",
+    "Support data-driven lending decisions efficiently.\n",
     "\n",
     "\n",
     "\n",
