--- a/index.ipynb
+++ b/index.ipynb
@@ -659,7 +659,7 @@
    ],
    "source": [
     "# Check loan_status values\n",
-    "print(\"Loan status values:\")\n",
+    "\n",
     "print(tb['loan_status'].value_counts())"
    ]
   },
@@ -901,7 +901,7 @@
     "# Create simple target variable\n",
     "tb['default'] = tb['loan_status'].isin(['Charged Off', 'Late (31-120 days)', 'Late (16-30 days)']).astype(int)\n",
     "\n",
-    "print(\"Target created:\")\n",
+    "\n",
     "print(tb['default'].value_counts())\n",
     "print(f\"\\nDefault rate: {tb['default'].mean():.1%}\")"
    ]
@@ -971,12 +971,10 @@
     "# Create engineered features\n",
     "tb_simple['income_to_loan_ratio'] = tb_simple['annual_inc'] / tb_simple['loan_amnt']\n",
     "tb_simple['payment_to_income_ratio'] = (tb_simple['loan_amnt'] / 36) / (tb_simple['annual_inc'] / 12)  # assuming 36 month term\n",
-    "tb_simple['debt_burden'] = tb_simple['dti'] * tb_simple['annual_inc'] / 100  # total debt amount\n",
+    "tb_simple['burden_of_debt'] = tb_simple['dti'] * tb_simple['annual_inc'] / 100  # total debt amount\n",
     "\n",
     "\n",
-    "print(\"1. income_to_loan_ratio - How many times income covers the loan\")\n",
-    "print(\"2. payment_to_income_ratio - Monthly payment as % of monthly income\")\n",
-    "print(\"3. debt_burden - Total debt amount in dollars\")\n"
+    "\n"
    ]
   },
   {
